--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -23,7 +23,8 @@
     opacity: 0.8;
     filter: blur(2px);
     transform: scale(1.05);
-    transition: transform 0.5s ease, filter 0.5s ease;
+    transform: translate3d(33%,-80px,100px);
+    transition: transform 1.0s ease, filter 1.0s ease;
   }
   
   #intro:hover .bg {
@@ -141,7 +142,7 @@
   
     .introContent {
       font-size: 0.9rem;
-      text-align: center;
+      text-align: left;
     }
   
     .hello {
