--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -1,6 +1,7 @@
 /* Intro Section */
 #intro {
     height: calc(100vh - 4rem);
+    padding-top: 5rem;
     width: 100vw;
     max-width: 75rem;
     margin: 0 auto;
